# ableton-live-mcp-server

./: README.md  pyproject.toml
ableton_live_mcp_server/: mcp_ableton_server.py  osc_daemon.py
