[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ableton-live-mcp-server"
version = "0.1.0"
description = "MCP Server for Ableton Live"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Project Contributors"}
]
dependencies = [
    "python-osc",
    "fastmcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/Simon-Kansara/ableton-live-mcp-server"
Issues = "https://github.com/Simon-Kansara/ableton-live-mcp-server/issues"

[project.scripts]
ableton-mcp-server = "ableton_live_mcp_server.mcp_ableton_server:main"
ableton-osc-daemon = "ableton_live_mcp_server.osc_daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["ableton_live_mcp_server"] 